# api-gateway-test

./: MakeFile  README.md  gateway.py  pyproject.toml
service_a/: main.py
service_b/: main.py
service_c/: main.py
